src/yini_test/cases/golden/lenient/valid/strings/double-quote-inside-single-quoted.yini
@yini

^ Strings
key = 'He said "hello"'
