src/yini_test/cases/golden/lenient/invalid/strings/string-with-raw-control-char.yini
@yini

^ Strings
key = "alpha	beta"
